# masterarbeit-vektorsuche

./: .gitignore  001_run_install.sh  002_run_prepare_data_embedder.sh  003_run_find_weights.sh  004_run_compare.sh  LICENSE  README.md  default.env  pyproject.toml
code/: auswertung_method_comparison.ipynb  embedder.py  explore_dataset.ipynb  find_best_weights.py  meta_classes.py  method_comparison.py  metrics.py  prepare_data.py  system_report.py
code/data/: example_cat_words.csv  example_query_product.json
code/data/embeddings/DEFAULT_Qwen_Qwen3-Embedding-0.6B_cuda_76ac2760/: best_weights_method_fast2.json  best_weights_method_fast2_on_candidates.json  best_weights_method_fast3.json  best_weights_method_fast3_on_candidates.json  products_meta.json  queries_meta.json
code/data/embeddings/DEFUALT_jinaai_jina-embeddings-v2-small-en_cuda_76ac2760/: best_weights_method_fast2.json  best_weights_method_fast2_on_candidates.json  best_weights_method_fast3.json  best_weights_method_fast3_on_candidates.json  products_meta.json  queries_meta.json
code/plots/: bsp_verknüpfen_von_produkt_felder.py  simble_embeddings.py
