[project]
name = "masterarbeit-vektorsuche"
version = "0.1.0"
description = ""
authors =[ {name = "Fucksilein", email = "fuchsilein0988@gmail.com"}]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.3,<3.15"
matplotlib = ">=3.10.7"
tikzplotly = ">=0.2.0"
tikzplotlib = ">=0.10.1"
plotly = { version = ">=6.1.2,<7.0.0", extras = ["kaleido"] }
sentence-transformers = ">=5.1.0,<6.0.0"
adjusttext = ">=1.3.0,<2.0.0"
pylatexenc = ">=2.10,<3.0"
black = { version = "==25.11.0", extras = ["jupyter"] }
isort = ">=6.0.1,<8.0.0"
pandas = ">=2.2.3,<3.0.0"
einops = ">=0.8.1"
umap-learn = ">=0.5.7"
poethepoet = ">=0.35.0"
poetry-core = ">=2.0.0,<3.0.0"
pyarrow = ">=21.0.0,<22.0.0"
fastparquet = ">=2024.11.0,<2025.0.0"
notebook = ">=7.4.3,<8.0.0"
seaborn = ">=0.13.2"
babel = ">=2.17.0,<3.0.0"
pandas-stubs = ">=2.3.2.250827,<3.0.0.0"
ipywidgets = ">=8.1.7"
jupyterlab-widgets = "==3.0.15"
frozendict = "^2.4.7"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

# --- Poe Tasks ---
[tool.poe.tasks]
format.shell = """
    poetry run black ./code ./src ./definitions.py
    poetry run isort ./code ./src
"""


[tool.isort]
profile = "black"
line_length = 88
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
